@@ -10,6 +10,7 @@
 
  1.8 beta 3: (2010-??-??)
  ! Fixed: NullPointerException when renaming an GPX file entry
+ ! MyTopo URL updated and fixed 
 
  1.8 beta 2: (2010-09-13)
  + AlpineQuestMap atlas creator updated (patch by Camille) 
